<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_image_publisher</name>
  <version>0.1.0</version>
  <description>Publishes robot status messages as JSON strings over ROS 2 topics, with multi-robot launch + YAML config.</description>

  <maintainer email="jh@todo.todo">jh</maintainer>
  <license>MIT</license>

  <!-- Build tool for ament_python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps for the node and launch -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
